// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle rendering renders expected elements 1`] = `
<button
  aria-checked={true}
  aria-label="Test"
  className="Toggle TestClass"
  id="test"
  onClick={[MockFunction]}
  role="switch"
  type="button"
/>
`;

exports[`Toggle rendering renders expected elements when className is not set 1`] = `
<button
  aria-checked={true}
  aria-label="Test"
  className="Toggle"
  id="test"
  onClick={[MockFunction]}
  role="switch"
  type="button"
/>
`;

exports[`Toggle rendering renders expected elements when disabled is true 1`] = `
<button
  aria-checked={true}
  aria-label="Test"
  className="Toggle TestClass"
  disabled={true}
  id="test"
  onClick={[MockFunction]}
  role="switch"
  type="button"
/>
`;
